# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  recipe.json  spec.yaml
.github/workflows/: general.yml
migrations/: 20250926141122_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
