[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Nick Agliano <nick.agliano@simplethread.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tracing = { version= "0.1", features = ["log"] }
tracing-subscriber = { version= "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"
tracing-log = "0.2"
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version= "1", features = ["derive"] }
serde-aux = "4"
config= "0.14"
uuid = { version= "1", features = ["v4"] }
chrono = { version= "0.4.22", default-features = false, features = ["clock"] }
secrecy = { version= "0.8", features = ["serde"] }
tracing-opentelemetry = "0.32.0"

[dependencies.sqlx]
version= "0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.12"
bunyan = "0.1.9"  # For formatting bunyan logs via cli, used in test_verbose.sh
